new UI of navbar

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -658,7 +658,9 @@ a
     display: none
   #container
     width: 90%
+    margin: 4.3rem auto 5rem auto;
     #create
+      padding: 0.7rem 0
       a
         display: none
       form
