--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -12,7 +12,7 @@ body
       #title CONNECT.
 
     form(action="{% url 'search' %}", method="GET") 
-      input#search-insert(type="text", placeholder="Search", name="search")
+      input.search-insert(type="text", placeholder="Search", name="search")
       
     ul
       li 
