--- a/templates/login.pug
+++ b/templates/login.pug
@@ -98,18 +98,6 @@ html
               });
             })
     #background-element
-      //-
-        #bubbles
-          #gb1.bbox
-            span#grey-bubble1.grey-bubble
-          #gb2.bbox
-            span#grey-bubble2.grey-bubble
-          #gb3.bbox
-            span#grey-bubble3.grey-bubble
-          #gb4.bbox
-            span#grey-bubble4.grey-bubble
-          #wb1.bbox
-          span#white-bubble1
       image#login-leftpic(src="{% static 'file/login-leftpic.png' %}")
       
       .description-head 
@@ -120,8 +108,8 @@ html
         p 想參加競賽但不知道找誰一起? 
         p 想逛costco需要找有卡的人?
         br
-        p 加入Connect發起活動與專案，
-        p 讓你找到同伴一起完成你想做的事!
+        p.final-description 加入Connect發起活動與專案，
+        p.final-description 讓你找到同伴一起完成你想做的事!
     
     //-script(src="{% static 'js/semantic.min.js' %}")
     script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
