add profile phone responsive

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -7,6 +7,7 @@
   padding: 0
 
 #navbar-2
+  display: none
   position: fixed
   bottom: 0
   left: 0
@@ -314,7 +315,8 @@ footer
 
 //phone responsive
 @media only screen and (max-width: 480px)
-
+  #navbar-2
+    display: block
   #navbar
     justify-content: center;
     #selecticon
