--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -160,6 +160,11 @@ html
             p.date 21/6/25
           p.description - 現在可以在留言中tag你的朋友了！（ 利用 @[名字] + 一個空格 ）
           
+          .top
+            p.version 0.0.16
+            p.date 21/6/27
+          p.description - app加緊趕工ing!!
+          
           
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
