--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -958,10 +958,10 @@ footer
             #school-info
               line-height: 1.5rem;
               #department
-                font-size: 1.4rem;
+                font-size: 1.1rem;
                 font-weight: 400;
               #grade
-                font-size: 1.2rem;
+                font-size: 1.1rem;
                 font-weight: 400;
           #description-tag
             #description-background
@@ -986,23 +986,32 @@ footer
             .tag-field:nth-child(3)
               border-radius: 0
               .tag-style
+                //align-items: center;
+                //justify-content: space-evenly;
+                //flex-direction: row;
+                //flex-wrap: wrap;
                 min-width: 0
                 .cmt-count
                   width: calc(0.9rem + 0.5rem);
                   font-size: 0.9rem;
                 .tag-comment
+                  //position: relative;
+                  //top: 0
               p
                 padding: 0.15rem;
             #buttons
               *
-                font-size: 1.2rem;
-                padding: 0.5rem 2rem;
+                font-size: 0.9rem;
+                font-weight: 500;
+                padding: 0.3rem 1.5rem;
       #bottom-region
         margin: 1rem 0 5rem 0;
         #left-pane
           width: auto
           padding: 1rem 1.5rem;
+          margin-bottom:
           #title-count
+            margin: 0
             p
               font-size: 1.3rem;
               font-weight: 500;
@@ -1014,26 +1023,44 @@ footer
           //max-height: 22.7rem
           max-height: 15.8rem
           overflow: auto;
+          align-items: flex-start;
+          justify-content: flex-start;
           a
+            margin: 0.1rem 0 0.1rem 0.5rem
             img
               display: none
               
             .friend-info
               display: block
               position: static
+              box-shadow: none
+              border: none
+              padding: 0
+              p
+                display: none
               .info-brief
+                p
+                  display: block
                 img
                   display: block
+                  width: 3.5rem
+                  height: 3.5rem
                 .info-brief-right
                   #friend-name
                     font-weight: 700;
                     font-size: 1.1rem;
-                  #info-brief-school
+                  .info-brief-school
                     p
-                      line-height: 1.1rem
+                      line-height: 0.9rem
+                    p:nth-child(1)
+                    p:nth-child(2)
+                      display: none
+                    p:nth-child(3)
+                    
                       
           .virtualimg
-            width: 4.2rem
+            //width: 4.2rem
+            display: none
         .comments
           max-height: 20vh
         .info
