modify navbar phone responsive

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -66,7 +66,7 @@ a
 #container
   display: flex
   justify-content: flex-start
-  align-items: stretch
+  align-items: center
   flex-direction: column
   flex-wrap: nowrap
   align-content: space-around
@@ -708,6 +708,7 @@ a
         a
           margin: 1.45rem 1.45rem 0 1.45rem
         .eventpost
+          box-shadow: 0rem 0rem 0.4rem 0.1rem var(--boxshadow-color);
           .posttop
             min-height: 5rem
             height: auto
