modify some profile UI

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -261,10 +261,22 @@ footer
           padding: 0.3rem 0
           font-weight: 900
           color: var(--fontcolor-third)
+        .personality-style
+          background-color: var(--yellow)
+        .personality-style:hover
+          background-color: var(--yellow-2)
+        .skill-style
+          background-color: var(--green-2)
+        .skill-style:hover
+          background-color: var(--green-3)
+        .interest-style
+          background-color: var(--orange-2)
+        .interest-style:hover
+          background-color: var(--orange-3)
         .tag-style
           position: relative
           min-width: 4.4rem
-          background-color: var(--background-color-tag1)
+          // background-color: var(--background-color-tag1)
           border-radius: 1rem
           margin: 0.2rem
           cursor: default
@@ -432,8 +444,6 @@ footer
       .tag-field:nth-child(3)
         .tag-style
           cursor: pointer
-        .tag-style:hover
-          background-color: var(--background-color-tag1-hover)
         p
           margin: 0 0.5rem 0 0.5rem
         .cmt-count
@@ -965,7 +975,7 @@ footer
                 font-weight: 400;
           #description-tag
             #description-background
-              background-color: var(--black-5);
+              background-color: var(--black-6);
               font-weight: 500;
               color: var(--black-1);
               #description
@@ -973,7 +983,7 @@ footer
                 
             .tag-field
               font-size: 0.9rem;
-              background-color: var(--black-5);
+              background-color: var(--black-6);
               min-width: 0
               padding: 0.15rem;
               margin-bottom: 0
@@ -1065,3 +1075,11 @@ footer
           max-height: 20vh
         .info
           margin-bottom: 0.5rem
+          .cardinfott
+            width: auto
+          .charname
+            width: 16%
+            white-space: nowrap
+        .comments
+          #comments-title
+            margin-left: 0.3rem
