--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -16,7 +16,7 @@
   //基本顏色 （數字大 淺
   --orange-1: #FFAD94
   --orange-2: #FFC5B3
-  --orange-3: #FFC5B3
+  --orange-3: #ffd0c0
   
   --green-1: #75E1C7
   --green-2: #9FE4D4
@@ -27,9 +27,11 @@
   --black-3: #828282
   --black-4: #BDBDBD
   --black-5: #E0E0E0
+  --black-6: #F2F2F2
     
   --blue: #6FD6F8
   --yellow: #F9D567
+  --yellow-2: #FADD87
   --red: #F87171
   --ricewhite: #FFFCF1
 
