--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -441,6 +441,7 @@ a
   top: 50%
   left: 50%
   width: 40%
+  max-height: 100%
   padding: 3% 0
   background-color: var(--background-color-container)
   border-radius: 3rem
@@ -543,7 +544,8 @@ a
       outline: none
       border: none
       font-size: 1rem
-      height: 10vh
+      height: 12vh
+      resize: none
     textarea:focus
       border: 2px solid var(--border-color-input-focus)
     
@@ -562,6 +564,11 @@ a
       color: #AAA
       font-size: 1rem
       margin-left: 1rem
+    canvas
+      width: 5rem
+      height: 5rem
+      margin-left: 1rem
+      margin-top: 1rem
     #requirements
       display: flex
       flex-direction: row
@@ -731,8 +738,8 @@ a
               overflow: hidden;
               
             #postimgs
-              width: 100%
-              height: 13rem
+              width: 4.5rem
+              height: 4.5rem
             
   #eventcreatewindow
     width: 96%
@@ -757,11 +764,11 @@ a
         font-size: 0.9rem
       input[type=file]
         font-size: 0.9rem
-        
       #id_title
         heightL 2.3rem
       #id_subtitle
         heightL 1.7rem
+      
         
         
     #buttons
