modify event window background color according to different status

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -19,9 +19,9 @@ input[type='button']:active
   min-width: 35rem
   max-width: 43rem
   padding: 2rem 2rem 1.5rem 2rem
-  background: linear-gradient(180deg,var(--border-color-eventwindow), #FFFFFF)
+  // background: linear-gradient(180deg,var(--border-color-eventwindow), #FFFFFF)
   border-radius: 3rem
-  border: 5px solid var(--border-color-eventwindow)
+  // border: 5px solid var(--border-color-eventwindow)
   box-shadow: 10px 10px 25px 5px var(--boxshadow-color)
   z-index: 7
   opacity: 0
