rm trash / modify top half of eventwindow responsive

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -283,6 +283,12 @@ a
 
   #img-cards
     top: 14rem
+    #cards
+      .logs
+        width: 100%
+        margin-bottom: 10rem;
+      #gap3
+        height: 20vh;
 
   .card
     margin-bottom: 5%
