--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -663,6 +663,8 @@ a
 @media only screen and (max-width: 480px)
   #phoneerrormsg
     display: none
+  #filter1
+    backdrop-filter: blur(1px) contrast(95%) saturate(70%) brightness(80%);
   #container
     width: 90%
     margin: 4.3rem auto 5rem auto;
@@ -706,6 +708,7 @@ a
     hr
       display: none
     #board
+      margin-bottom: 3rem
       #divider
         justify-content: center;
         #line2
