--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -144,8 +144,8 @@ a
       
     #event
       background-image: url('../file/scheduleicon.png')
-    // #alert
-    //   background-image: url('../file/noticeicon.png')
+    #appalert
+      display: none
     #message
       background-image: url('../file/msgicon.png')
     #aboutus
@@ -307,7 +307,8 @@ footer
 //#gotop:hover
   //opacity: 0.65
   //background-color: #ffdbd0
-      
+  
+  
 //tablet responsive
 @media only screen and (max-width: 1024px)
   #selecticon
@@ -442,8 +443,4 @@ footer
     width: 4rem;
     height: 4rem;
   footer
-    height: auto
-    flex-direction: column
-    padding: 0.7rem 0
-    p
-      font-size: 0.65rem
+    display: none
