--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -374,6 +374,7 @@ footer
                   align-items: stretch;
                   align-content: space-between;
                   position: absolute
+                  z-index: 5
                   padding: 0.5rem
                   background-color: var(--background-color-freind)
                   border: solid var(--background-color-navbar) 0.1rem
@@ -605,6 +606,7 @@ footer
         align-items: stretch;
         align-content: space-between;
         position: absolute
+        z-index: 5
         padding: 0.5rem
         background-color: var(--background-color-freind)
         border: solid var(--background-color-navbar) 0.1rem
@@ -703,6 +705,8 @@ footer
           
       input
         cursor: pointer
+        position: relative
+        z-index: 3
     
     .page-panel
       position: relative
@@ -901,7 +905,10 @@ footer
       margin-bottom: 1rem
 
 @media only screen and (max-width: 1230px)
-   #right-pane
+  #school-info
+    flex-wrap: wrap
+    justify-content: center
+  #right-pane
     width: calc(100%)
     .date
       display: none
@@ -1072,8 +1079,14 @@ footer
           .virtualimg
             //width: 4.2rem
             display: none
+        .card
+          margin: 0 1.2rem 0.6rem 1.2rem
+          padding: 1.2rem
         .comments
           max-height: 20vh
+        .eventcomment #eventcomment-right #eventcomment-righttop #event-date
+          font-size: 0.6rem
+          margin-right: 0.4rem
         .info
           margin-bottom: 0.5rem
           .cardinfott
