set some eventwindow responsive, fix notice red dot error

--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -323,15 +323,14 @@ body
         font-size: 1.4rem
   
 //phone responsive
-@media only screen and (max-width: 450px)
+@media only screen and (max-width: 480px)
   body
     display: flex
     flex-direction: column
   #panel1
     position: static
-    transform: translate(0, 0)
-    margin: 5rem 5% 2rem 5%
-    width: 90%
+    margin: 5rem 5vw 2rem 5vw
+    width: 90vw
   #background-element
     #login-leftpic
       width: 90%
