--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -92,6 +92,7 @@ input[type='button']:active
             border-radius: 0.7rem;
             //border: solid 2px var(--black-3);
             //padding-left: 0.5rem
+            word-break: break-all;
           #event-subtitle
             font-size: 1rem
             color: var(--fontcolor-third)
@@ -99,6 +100,7 @@ input[type='button']:active
             border-radius: 0.5rem;
             //border: solid 2px var(--black-3);
             //padding-left: 0.5rem
+            word-break: break-all;
           #event-require
             display: flex
             flex-direction: row;
@@ -147,6 +149,7 @@ input[type='button']:active
         padding: 0.5rem
         border-radius: 1rem
         background-color: rgba(256, 256, 256, 0.5)
+        word-break: break-all;
     
     #eventmsgregion
       display: flex
@@ -748,6 +751,7 @@ input[type='button']:active
       flex-direction: column;
       flex-wrap: nowrap;
       padding: 1.5rem 0.5rem 1rem 0.5rem;
+      background: linear-gradient(var(--green-1) 40vw, #FFFFFF 50vw);
       #eventwindow-left
         width: 100%;
         margin: 0;
@@ -765,7 +769,7 @@ input[type='button']:active
               margin: 0
               margin-top: 2.3rem;
               #event-title
-                font-size: 1.2rem;
+                font-size: 1.3rem;
                 font-weight: 500;
               #event-subtitle
                 line-height: 1rem;
@@ -781,29 +785,52 @@ input[type='button']:active
                 top: 41vw
                 height: 4rem;
                 width: 88%
+                margin-top: 0.5rem;
+                .requiretag
+                  border: solid 1px var(--black-3);
+                  margin: 0 0.2rem 0.3rem 0;
             #date
               position: absolute;
               flex-direction: row;
               transform: translate(0, 0);
               left: 41.5vw
-              top: 1rem
+              top: 1.5rem
               #event-date
                 margin: 0 3vw 0 0
-                font-size: 0.8rem
+                font-size: 0.7rem
                 width: 5rem
               #due-date
                 margin: 0 3vw 0 0
-                font-size: 0.8rem
+                font-size: 0.7rem
                 width: 5rem
           #event-detail
-            margin: 5rem 0 0 0.5rem;
+            margin: 3.5rem 0 0 0.5rem;
             width: calc(100% - 1.5rem);
+            font-size: 0.9rem
+            margin-top: 0.5rem;
+            min-height: 3rem;
+            max-height: 7rem;
                 
         #eventmsgregion
-          height: 5rem;
+          height: 30vh
           width: calc(100% - 2rem);
           margin-top: 0.5rem;
+          box-shadow: none;
+          #msgtitle
+            font-size: 1.1rem;
+            padding: 0 0 0.3rem 0;
         #eventmsg-sender
+          .comment-operate-region
+            input
+            .eventmsg-insert
+              width: 70%
+            .eventmsg-btn
+              left: auto
+            .eventjoin-btn
+              position: absolute
+            .eventedit-btn
+              position: absolute
+            
       #eventwindow-right
         #eventoperate
       #eventjoinwindow
