modify notification as full-screen, fix some bugs

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -803,7 +803,7 @@ input[type='button']:active
                 position: absolute;
                 left: 1.5rem;
                 top: 41vw
-                height: 4rem;
+                height: 17vw
                 width: 88%
                 margin-top: 0.5rem;
                 .requiretag
@@ -869,10 +869,12 @@ input[type='button']:active
               position: fixed
               bottom: 1.2rem;
               right: 17vw;
+              z-index: 1;
             .eventedit-btn
               position: fixed
               bottom: 1.2rem;
               right: 17vw;
+              z-index: 1;
             
       #eventwindow-right
         width: 100%
@@ -912,7 +914,7 @@ input[type='button']:active
                 margin: 0 0.3rem;
                 line-height: 1rem;
                 font-size: 0.8rem;
-                font-weight: 900;
+                font-weight: 700;
                 line-height: 0.8rem;
             #part-m
               flex-direction: row;
@@ -924,7 +926,7 @@ input[type='button']:active
                 margin: 0 0.3rem;
                 line-height: 1rem;
                 font-size: 0.8rem;
-                font-weight: 900;
+                font-weight: 700;
                 line-height: 0.8rem;
           #likebutton
             bottom: 0;
