--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -711,12 +711,13 @@ a
       margin-bottom: 3rem
       #divider
         justify-content: center;
+        margin: 1rem 1rem 0 1rem;
         #line2
           width: 0
       #eventboard
         margin-bottom: 2rem
         a
-          margin: 1.45rem 1.45rem 0 1.45rem
+          margin: 1.3rem 1.45rem 0 1.45rem;
         .eventpost
           box-shadow: 0rem 0rem 0.4rem 0.1rem var(--boxshadow-color);
           .posttop
