--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -16,7 +16,7 @@ html
     link(href="{% sass_src 'sass/homepage.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
-    script(src="https://d3js.org/d3.v5.js")
+    //script(src="https://d3js.org/d3.v5.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")\
     script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")\
     script(src="{% static 'js/homepage.js' %}")
