--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -86,6 +86,11 @@ input[type='button']:active
           width: 20vw
           min-width: calc(11 * 1.5rem)
           margin-left: 0.7rem
+          input#event-title
+            margin-bottom: 0.2rem
+            padding-left: 1rem
+          input#event-subtitle
+            padding-left: 1rem
           #event-title
             font-size: 1.5rem
             border-radius: 0.7rem;
@@ -117,6 +122,16 @@ input[type='button']:active
               margin: 0 0.5rem 0.3rem 0
               font-size: 0.85rem
               text-align: center
+            input.requiretag
+              width: 4rem
+            input.require-insert
+              background-color: white
+              border-radius: 0.6rem
+              padding: 0.1rem 0.5rem
+              margin: 0 0.5rem 0.3rem 0
+              font-size: 0.85rem
+              text-align: center
+              width: 1rem
         #date
           display: flex
           flex-direction: column;
@@ -134,6 +149,11 @@ input[type='button']:active
             font-weight: 500
             margin-top: 0.7rem
             width: 100%
+          input
+            border-radius: 0.6rem
+            padding: 0.2rem 0 0.2rem 0.3rem
+            outline: none
+            border: none
       
       #event-detail
         font-size: 0.95rem
